recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:8: error: not found: value letf
    letf(angle);
    ^